TEST_PROGRAMS/VALID/cecily_thomas/fibonacci.min
# Compute the nth fibonacci number, reading n

var n: int;
var x: int;
var y: int;
var z: int;

read n;
x = 0;
y = 1;
n = n - 1; 

if n then
	while n do
		z = x + y;
		x = y;
		y = z;
		n = n - 1;
	done
else
	z = -1;
endif

print z;
