TEST_PROGRAMS/INVALID/omer_dirar/declaration_statement_syntax_mixing.min
#Syntactically incorrect: declaration and statement syntax are mixed

var x : int;
var y : if x then x = x - 1 else y = x;
var z : string;

x = 10;
y = x;

while z do
    if x then
        var w : while w do
                    print var v : float;
                done
    else 
        
    endif
done

